--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </tr>
 <tr>
 <td align="center" valign="middle" width="700" height="700">
-<img alt="Тірамісу" width="480" height="500" src="tiramis.JPG">
+<img alt="Тірамісу" width="480" height="500" src="tiramis.jpg">
 <p><font color="#696969" size="4"><b>Тірамісу</b></p>
 <input  type="button" value="Рецепт" onclick="location.href='Order1.html'">
 </td>
