--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
 <input  type="button" value="Рецепт" onclick="location.href='Order1.html'">
 </td>
 <td align="center" valign="middle" width="700" height="700">
-<img alt="Павлова" width="480" height="500" src="pavlova.JPG">
+<img alt="Павлова" width="480" height="500" src="pavlova.jpg">
 <p><font color="#696969" size="4"><b>Павлова</b></p>
 <input  type="button" value="Рецепт" onclick="location.href='Order2.html'">
 </td>
 </tr>
 <tr>
 <td align="center" valign="middle" width="700" height="700">
-<img alt="Чіскейк" width="480" height="500" src="chiscake.JPG">
+<img alt="Чіскейк" width="480" height="500" src="chiscake.jpg">
 <p><font color="#696969" size="4"><b>Чіскейк</b></p>
 <input  type="button" value="Рецепт" onclick="location.href='Order3.html'">
 </td>
 <td align="center" valign="middle" width="700" height="700">
-<img alt="Еклер" width="480" height="500" src="ekler.JPG">
+<img alt="Еклер" width="480" height="500" src="ekler.jpg">
 <p><font color="#696969" size="4"><b>Еклери</b></p>
 <input  type="button" value="Рецепт" onclick="location.href='Order4.html'">
 </td>
